@@ -1,0 +1,9 @@
+Wood_Wall 5 50
+Metal_Wall 80 800
+Concrete_Wall 120 1200
+Pit 180 3600
+
+Electric_Floor 50 100
+Door 600 2400
+Trapdoor 1800 3600
+Pitbull 800 1200
